    [Greg Sabino Mullane]
    (CPAN ticket #102444)

  - Fix skipped test counts in Win32 builds
    [Andy Grundman]

  - Allow tests to work against Postgres 8.4 by tweaking client_encoding calls.
    [Pavel Raiskup    praiskup at redhat.com]
    (CPAN ticket #116179)

  - Silence warnings in t/02attribs.t and t/04misc.t
    [Dagfinn Ilmari Mannsåker]

  - Switched canonical repo to git://github.com/bucardo/dbdpg.git


Version 3.5.3  Released October 1, 2015 (git commit 62ddf200106467ce9ad31d85715a4cdf63e8be14)

  - Minor fix in the test file t/03dbmethod.t


Version 3.5.2  Released September 29, 2015 (git commit be8026c9160c4a29580a97dab57cb595c5448949)

  - Fix enum value ordering on Postgres servers 9.1 and greater
    [Dagfinn Ilmari Mannsåker]

  - Return bigint values as plain integer values when they fit
    [Dagfinn Ilmari Mannsåker]

  - Fix typo in sprintf for get_info() SQL_DATA_SOURCE_NAME
    [Craig A. James]
    (CPAN bug #106604)

  - Set the repository in META.yml to github


Version 3.5.1  Released February 17, 2015 (git commit 6c3457ee20c19ae492d29c490af6800e7e6a0774)

  - Prevent core dump if the second argument to the quote() method 
    is anything but a hashref
    [Greg Sabino Mullane]
    (CPAN bug #101980)

  - Better "support" for SQL_ASCII servers in the tests.
    Allow env var DBDPG_TEST_ALWAYS_ENV to force use of DBI_DSN and DBI_USER in tests.
    [Greg Sabino Mullane]

  - Fix client_encoding detection on pre-9.1 servers
    [Dagfinn Ilmari Mannsåker]

  - Fix operator existence check in tests on pre-8.3 servers
    [Dagfinn Ilmari Mannsåker]

  - Documentation fix
    [Stuart A Johnston]

  - Fix pg_switch_prepared database handle documentation
    [Dagfinn Ilmari Mannsåker]

Version 3.5.0  Released January 6, 2015 (git commit bb13d3306fd1c73fac1c0c8a330c14e6b8443942)

  - Allow "placeholder escaping" by the use of a backslash directly before it, e.g.
    "SELECT 1 FROM jsontable WHERE foo \\? ?"