@@ -49,6 +49,9 @@ Version 3.5.9_1 (beta for 3.6.0)
   - Silence warnings in t/02attribs.t and t/04misc.t
     [Dagfinn Ilmari Mannsåker]
 
+  - Fix UTF8 flag handling in pg_(get|put)copydata
+    [Dagfinn Ilmari Mannsåker]
+
   - Switched canonical repo to git://github.com/bucardo/dbdpg.git
 
 
